# socket-programming

./: CMakeLists.txt  dns_query.c  lookup.c  tcp_client.c  tcp_serve_chat.c  tcp_toupper_serve.c  time_server.c  udp_client.c  udp_recvfrom.c  udp_sendto.c  udp_toupper_serve.c  web_get.c  web_server.c
